# jetpack-hack

./: .gitignore  Cargo.toml  FINDINGS.md  README.md  scan_results.md  sweep_results.md  test_results.md  test_results_m_modes.md  verify_plan.json  verify_plan_extended.json  verify_plan_m_modes.json  verify_results.md  verify_results_m_modes.md
ble-hack-skill/: README.md  SKILL.md  verify_plan.example.json
ble-hack-skill/src/: crc.rs  lib.rs  pipeline.rs  workdir.rs
src/: jetpack_protocol.rs  lib.rs
