[workspace]
members = ["ble-hack-skill"]
resolver = "2"

[package]
name = "jetpack-hack"
version = "0.1.0"
edition = "2024"
description = "BLE protocol reverse-engineering for Kaotik Lab The Jetpack"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jetpack_probe"
path = "src/bin/jetpack_probe.rs"

[[bin]]
name = "jetpack_sweep"
path = "src/bin/jetpack_sweep.rs"

[dependencies]
ble-hack-skill = { path = "ble-hack-skill" }
anyhow = "1.0.102"
btleplug = "0.12.0"
futures = "0.3.32"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
uuid = "1.23.3"
